--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -43,55 +43,55 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
   <!-- black bar on top -->
   <RelativeLayout
-    android:id="@+id/top_bar"
-    android:layout_width="fill_parent"
-    android:layout_height="80dp"
-    android:background="@color/background_black">
+      android:id="@+id/top_bar"
+      android:layout_width="fill_parent"
+      android:layout_height="140dp"
+      android:background="@color/background_black">
 
     <ImageView
-      android:id="@+id/robotIcon"
-      android:src="@drawable/icon_robotcontroller"
-      android:layout_width="wrap_content"
-      android:layout_height="fill_parent"
-      android:adjustViewBounds="true"
-      android:layout_margin="1dp"/>
+        android:id="@+id/robotIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_margin="1dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/mm_logo" />
 
     <TextView
-      android:id="@+id/textDeviceName"
-      android:layout_toEndOf="@id/robotIcon"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textColor="?attr/textWhite"
-      android:textAppearance="?android:attr/textAppearanceMedium"
-      android:padding="8dp"
-      android:textStyle="bold"
-      tools:text="9999-RC"/>
+        android:id="@+id/textDeviceName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/robotIcon"
+        android:padding="8dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="?attr/textWhite"
+        android:textStyle="bold"
+        tools:text="9999-RC" />
 
     <TextView
         android:id="@+id/openftc_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/robotIcon"
         android:layout_below="@id/textDeviceName"
-        android:textColor="?attr/textWhite"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_toEndOf="@+id/robotIcon"
         android:padding="8dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="?attr/textWhite"
         android:textStyle="bold"
         tools:text="OpenFTC v1.0" />
 
     <ImageButton
-      android:id="@+id/menu_buttons"
-      android:scaleType="fitXY"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:src="@drawable/icon_menu"
-      android:background="@android:color/transparent"
-      android:padding="15dp"
-      android:adjustViewBounds="true"
-      android:layout_alignParentEnd="true"
-      android:layout_centerInParent="true"
-      android:layout_centerHorizontal="true"
-      android:layout_margin="10dp"/>
+        android:id="@+id/menu_buttons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
+        android:layout_margin="10dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:padding="15dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/icon_menu" />
 
   </RelativeLayout>
   <!-- end of black bar -->
