--- a/RobotCore/src/main/res/values/colors.xml
+++ b/RobotCore/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="almost_dark_purple">#270c4b</color>
     <color name="almost_dark_red">#490c10</color>
     <color name="almost_dark_teal">#0c3a4b</color>
-    <color name="background_black">#000000</color>
+    <color name="background_black">#e40496</color>
     <color name="background_dark_gray">#444444</color>
     <color name="background_orange">#ff9000</color>
     <color name="background_white">#ffffff</color>
