--- a/FtcRobotController/src/main/res/menu/ftc_robot_controller.xml
+++ b/FtcRobotController/src/main/res/menu/ftc_robot_controller.xml
@@ -32,7 +32,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+  <item
+      android:id="@+id/action_field"
+      android:orderInCategory="0"
+      android:icon="@android:drawable/ic_menu_info_details"
+      android:title="@string/field_menu_item"/>
   <item
     android:id="@+id/action_settings"
     android:orderInCategory="100"
