--- a/FtcRobotController/src/main/res/layout/activity_field_position.xml
+++ b/FtcRobotController/src/main/res/layout/activity_field_position.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
