--- a/FtcRobotController/src/main/res/layout/activity_field_position.xml
+++ b/FtcRobotController/src/main/res/layout/activity_field_position.xml
@@ -50,7 +50,7 @@
         </LinearLayout>
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/checkBox_DogeCV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/button_blue_top"
